# Moonshot

./: .gitignore  ARCHITECTURE.md  README.md  VISUAL_TEST_ARCH.md  VISUAL_TEST_SPEC.md  pyproject.toml  requirements.txt
docs/: DESIGN-weather-visual-tests.md
src/: config.py  main.py
src/atmosphere/: __init__.py  airmass.py  refraction.py  scattering.py
src/data/: README.md
src/location/: geocode.py  timezone.py
src/moon/: __init__.py  phase.py  position.py  timeconv.py
src/render/: __init__.py  annotations.py  composite.py  horizon.py  moon_render.py  moon_texture.py  sky.py  stars.py  weather_overlay.py
src/weather/: provider.py
tests/: conftest.py  test_geocode.py  test_integration.py  test_moon_texture.py  test_phase.py  test_position.py  test_refraction.py  test_scattering.py  test_stars.py  test_timeconv.py  test_visual.py  test_weather.py
